# python-build-standalone

./: Cargo.toml  Justfile  build-linux.py  build-macos.py  ci-matrix.py  ci-runners.yaml  ci-targets.yaml  latest-release.json  pyproject.toml  requirements.dev.txt  requirements.txt  requirements.win-arm64.txt  requirements.win.txt
.github/: FUNDING.yml
.github/workflows/: check.yml  linux.yml  macos.yml  publish-versions.yml  release.yml  windows.yml  zizmor.yml
cpython-unix/: build-cpython.sh  build-main.py  extension-modules.yml  patch-python-link-modules-3.15.patch  patch-sem-clockwait-weak-3.10.patch  patch-sem-clockwait-weak-3.11.patch  patch-sem-clockwait-weak-3.12.patch  patch-sem-clockwait-weak-3.13.patch  patch-sem-clockwait-weak-3.15.patch
cpython-windows/: build.py
docs/: building.rst
pythonbuild/: docker.py  downloads.py
src/: github.rs  main.rs  release.rs  s3.rs
