[package]
name = "pythonbuild"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
apple-sdk = "0.6.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
bytes = "1.11.1"
clap = "4.5.60"
duct = "1.1.1"
flate2 = "1.1.9"
futures = "0.3.32"
goblin = "0.10.5"
hex = "0.4.3"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client"] }
hyper-util = { version = "0.1.20" }
normalize-path = "0.2.1"
object = "0.38.1"
octocrab = { version = "0.49.5", features = ["rustls", "stream"] }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
once_cell = "1.21.3"
pdb = "0.8.0"
pep440_rs = "0.7.3"
rayon = "1.11.0"
reqwest = { version = "0.13", features = ["rustls", "stream"] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
scroll = "0.13.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.26.0"
text-stub-library = "0.9.0"
tokio = "1.50.0"
tokio-util = "0.7.18"
url = "2.5.8"
version-compare = "0.2.1"
zip = "8.2.0"
zstd = "0.13.3"
