[project]
name = "python-build-standalone"
version = "0.1.0"
description = "Produces standalone, highly-redistributable builds of Python."
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "six>=1.17.0",
    "tomli>=2.4.0",
    "typing-extensions>=4.15.0",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pythonbuild"
module-root = ""
